<resources>
    <string name="app_names">WERide</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="email_id">email id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="failed">Authentication failed</string>
    <string name="image">image</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Rides Filter</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">profile</string>
    <string name="menu_slideshow">bus booking</string>
    <string name="menu_tools">setting</string>
    <string name="menu_share">help</string>
    <string name="menu_send">History</string>
    <string name="username">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="my_number">+923424475733</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="city">Present Location</string>
    <string name="no_text"> </string>

    <string name="permission_refused">Permission was not granted</string>
    <string name="permission_request_title">Special Permission Request</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality.
        If it is not granted your app might not work the way it is intended</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="rides_history">Rides History</string>
    <string name="wallet_transaction"><![CDATA[Wallet & Transaction]]></string>
    <string name="how_it_works">FAQ</string>
    <string name="call_we_ride_support">Call WE Ride Support</string>
    <string name="refer_a_friends">Refer a Friends</string>
    <string name="log_out">Log out</string>
    <string name="setting">Setting</string>
    <string name="intro">There are various applications and ride booking applications out there that help people in their daily commute.
        The mainstream applications available aid the commute of a single person with a calculated fare based on the distance traveled.\n However, the car driver in this case is upset over the fact that they are riding with two empty seats and also if they drop a rider at a certain destination and then another ride is pinged to them with the same destination as before they have to  burn the fuel twice which in turn increases their travel expenses. </string>
    <string name="so">So, with our devised system based on the concept of carpooling, we provide these drivers with a platform in which they can take multiple riders to the same destination which will save them their fuel expenses. For the riders the fare for the ride will also be distributed among the number of people traveling. The application will be android based with a web module for branding and some core functionalities.</string>
    <string name="confirm_otp">confirm OTP</string>
    <string name="spinner_title">select category</string>
    <string name="get_started">Get Started</string>
    <string name="driver"> Driver</string>
    <string name="choose_a_rider_or_driver_position">Choose a Rider or Driver Position</string>
    <string name="rider">  Rider</string>


    <!--Extra String values -->
    <!-- Error Message -->
    <string name="msg_no_data_found">No Results Found </string>
    <string name="msg__duplicate_data">Duplicate data</string>
    <string name="msg_time_out">Timeout error!</string>
    <string name="msg_record_not_match">No Match Result!  </string>
    <string name="msg_server_error">Some server error!</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="error_msg_internet">Please check your internet connection and try again!</string>
    <string name="error_msg_invalid_email">Invalid email! Please try again with correct email</string>
    <string name="error_msg_invalid_email_password">Login failure! Please Enter Valid Email Password!</string>


    <string name="dob_title">When\'s your birthday?</string>
    <string name="email_lable">email</string>
    <string name="phone_lable">Phone Number</string>
    <string name="tem_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos</string>
    <string name="tem_text_medium">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</string>
    <string name="opt_lable_info">A 6 digit OTP has been send to 3xx-xxxxxxx</string>
    <string name="password_enter_label">Please Enter the password</string>
    <string name="username_enter_label">Please Enter the username</string>

    <string name="tem_text_short">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</string>
    <string name="login_screen_title">Log in to TikTok</string>
    <string name="usernameAndEmail">phone number or email</string>
    <string name="login_vis_phone_number">Log in vis Phone Number</string>
    <string name="tem_userName">Michel John</string>
    <string name="All_Activities">All Activities</string>
    <string name="followers_count_following_count">13.3k Followers . 680 Vidoes</string>
    <string name="Following">Following</string>
    <string name="Follow">Follow</string>
    <string name="Likes">Likes</string>
    <string name="display_username">\@waleedali</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_video">Change Video</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Bio">Bio</string>
    <string name="Website">Website</string>
    <string name="Instagram">Instagram</string>
    <string name="Facebook">Facebook</string>
    <string name="Change_Password">Change Password</string>
    <string name="Feedback">Feedback</string>
    <string name="Find_Friends">Find Friends</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="test_videoUrl">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4</string>
    <string name="test_videoUrl_2">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
    <string name="Followers">Followers</string>
    <string name="Sign_up_with_Social">Sign up with Social Media Accounts</string>
    <string name="Already_have_account">Already have an account? Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="dob_required">DOB required</string>
    <string name="Password_too_short">Password too short</string>
    <string name="Live_Stream">Live Stream</string>
    <string name="tem_hashTag">#HashTags</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_top">Top</string>
    <string name="tab_text_Users">Users</string>
    <string name="tab_text_Sounds">Sounds</string>
    <string name="tab_text_Videos">Videos</string>
    <string name="tab_text_Hashtags">Tags</string>
    <string name="tem_soundName">Music Name</string>
    <string name="Enter_OTP_Number">Enter OTP Number</string>
    <string name="Set_Password">Set Password</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="Edit_profile">Edit profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Error">Error</string>
    <string name="packages">Packages</string>
    <string name="get_direction">Get Direction</string>
</resources>
