<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_my_rides"
            android:title="@string/rides_history" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/wallet_transaction" />

        <item
            android:id="@+id/nav_Groups"
            android:icon="@drawable/ic_group"
            android:title="Rider Groups" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/location"
            android:title="Rider Packages" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="Rider Setting" />

    </group>


    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_feedback_black_24dp"
                    android:title="@string/help_support" />
                <item
                    android:id="@+id/nav_callSupport"
                    android:icon="@drawable/ic_call_black_24dp"
                    android:title="@string/call_we_ride_support" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/refer_a_friends" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

</menu>
