<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.pool.Weride.signup_activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:fontFamily="sans-serif-condensed-light"
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textviewrounded"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:fontFamily="sans-serif-condensed-light"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/username"
        android:background="@drawable/textviewrounded"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


    <EditText
        android:fontFamily="sans-serif-condensed-light"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textviewrounded"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/already_having_account"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/buttonshape"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />


    <ProgressBar
        android:layout_marginTop="30dp"
        android:id="@+id/progressBarsignup"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />


</LinearLayout>