<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context="com.pool.Weride.signin_activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Login"
        android:textColor="@color/icons"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-condensed-light"
        android:background="@drawable/textviewrounded"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxLength="8"
        android:background="@drawable/textviewrounded"
        android:hint="@string/password"
        android:fontFamily="sans-serif-condensed-light"
        android:inputType="textPassword"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_having_account"
        android:layout_marginBottom="20dp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@android:color/white" />


    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/google_sign_up"
        app:isDarkTheme="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />


</LinearLayout>