<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/userTypeLayout"
    tools:context=".Activities.userType">

    <!-- dark blue color #6537B5-->
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_marginStart="@dimen/_29sdp"
        android:outlineAmbientShadowColor="@color/app_color_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!-- dark blue color #6537B5-->
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti1"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/riderUser"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="206sp"
            android:layout_height="190sp"
            android:background="@drawable/rider"
            android:scaleType="fitCenter">

        </Button>

        <Button
            android:id="@+id/driverUser"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="154dp"
            android:layout_height="172dp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/driver"
            android:scaleType="fitCenter"></Button>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="304sp"
        android:layout_height="40sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/text_color"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="403sp"
        android:layout_height="34sp"
        android:layout_marginTop="168sp"
        android:layout_marginBottom="68sp"
        android:fontFamily="@font/roboto_medium"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/choose_a_rider_or_driver_position"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_88sdp"
        android:layout_marginBottom="@dimen/_150sdp"
        android:gravity="center_horizontal"
        android:text="@string/rider"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_26sdp"
        android:layout_marginBottom="@dimen/_150sdp"
        android:gravity="center_horizontal"
        android:text="@string/driver"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.444" />

</androidx.constraintlayout.widget.ConstraintLayout>